[package]
name = "memory-cache-rs"
version = "0.2.0"
edition = "2018"
authors = ["aikidos <www.aikidos@gmail.com>"]
description = "Simple local in-memory cache for Rust"
homepage = "https://github.com/aikidos/memory-cache-rs"
documentation = "https://docs.rs/memory-cache-rs/"
repository = "https://github.com/aikidos/memory-cache-rs"
keywords = ["cache", "memory"]
categories = ["memory-management"]
readme = "README.md"
license = "MIT"
exclude = [
    "/.github/*"
]

[lib]
name = "memory_cache"

[dependencies]
once_cell = "1.3.1"